# toisto

./: .gitignore  .vulture-whitelist.py  CHANGELOG.md  README.md  SECURITY.md  deck-counting.json  justfile  kieli.py  mutmut_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  toisto.spec
.github/: dependabot.yml
.github/workflows/: codeql.yml  pipeline.yml  test.yml
docs/: background.md  concept_files.md  developer.md  plot_growth_factor.py  software.md  userguide.md
src/: pyinstaller_main.py
src/concepts/: CN1.1.json  SM1.1.json  SM1.2.json  SM1.3.json  SM1.4.json  SM1.5.json  SM1.6.json  SM1.7.json  SM1.8.json  SM1.9.json  adjectives.json  adpositions.json  adverbs.json  animals.json  auxiliary_verbs.json  body.json  books.json  cities.json  city.json  clothes.json  colors.json  conjunctions.json  continents.json  counting.json  countries.json  days.json  demonstrative_pronouns.json  family.json  food.json  furniture.json  greetings.json  health.json  holidays.json  house.json  interrogative.json  interrogative_pronouns.json  languages.json  learning.json  linguistics.json  little_words.json  (+18 more)
src/concepts/adjectives/: active.json  all kinds of.json  awesome.json  bad.json  beautiful.json  big.json  bilingual.json  boring.json  brave.json  bright.json  by.json  cheap.json  cheerful.json  closed.json  cloudy.json  cold.json  common.json  comprehensive.json  cool.json  crazy.json  current.json  cute.json  dark.json  dead.json  delicious.json  different.json  distant.json  divorced.json  dry.json  dumb.json  early.json  easy.json  energetic.json  engaged.json  enthusiastic.json  excellent.json  expensive.json  famous.json  fast.json  fat-free.json  (+93 more)
src/concepts/adpositions/: after.json  all over.json  around.json  as of.json  at.json  before.json  behind.json  below.json  between.json  during.json  in front of.json  in the middle.json  next to.json  on top of.json  prior to.json  to the left.json  to the right.json  to.json  via.json  with.json  without.json
src/concepts/adverbs/: a great deal.json  accidentally.json  accurately.json  actively.json  actually.json  additionally.json  after.json  again.json  all the time.json  almost.json  already.json  also.json  although.json  always.json  at day.json  at least.json  at the destination.json  at the lastest.json  at the same time.json  back.json  before.json  beforehand.json  broken.json  coming from.json  conveniently.json  currently.json  early.json  easily.json  especially.json  even.json  eventually.json  exactly.json  far.json  finally.json  first.json  from afar.json  from which country.json  full.json  gladly.json  handily.json  (+53 more)
src/concepts/conjunctions/: and.json  as well as.json  because.json  before.json  but.json  if.json  so that.json  that is to say.json  therefore.json  though.json
src/concepts/determiners/: a certain.json  all.json  every.json  how many.json  many.json  what kind of.json
src/concepts/mixed/: colors.json  food.json  holidays.json  in time.json  seasons.json
src/concepts/nouns/: ability.json  accent.json  accomodation.json  actor.json  adder.json  adult education center.json  adult.json  advice.json  age.json  air.json  allergy.json  allowance.json  alphabet.json  alternative.json  ambulance.json  amount.json  animal.json  ankle.json  answer.json  ant.json  anxiety.json  apartment.json  appetite.json  application.json  appointment.json  area.json  arm.json  art.json  association.json  atmosphere.json  attachment.json  attraction.json  audience.json  authority.json  back.json  backpack.json  bacterium.json  badger.json  badminton.json  bag.json  (+622 more)
src/concepts/numbers/: 0.json  1.json  10.json  100.json  1000.json  1000000.json  1000000000.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  200.json  2000.json  2000000.json  21.json  22.json  23.json  24.json  3.json  30.json  300.json  4.json  40.json  5.json  50.json  500000.json  5000000000.json  6.json  60.json  7.json  70.json  8.json  80.json  (+3 more)
src/concepts/phrases/: a pleasure to meet you.json  all together.json  among other things.json  and you.json  anything else.json  as a matter of fact.json  by the way.json  bye.json  cash or card.json  damn.json  (+74 more)
src/kieli/: __main__.py  app.py
src/languages/: spelling_alternatives.json
src/toisto/: __main__.py  app.py  cli.py  color.py  diff.py  match.py  metadata.py  model.py  output.py  persistence.py  speech.py  tools.py
src/topics/: adjectives.json  adpositions.json  adverbs.json  animals.json  auxiliary_verbs.json  body.json  books.json  cities.json  city.json  clothes.json  colors.json  conjunctions.json  continents.json  counting.json  countries.json  days.json  degrees_of_comparison.json  demonstrative_pronouns.json  drinks.json  family.json  food.json  fruit.json  furniture.json  giving_directions.json  grammar.json  greetings.json  health.json  holidays.json  house.json  interrogative_pronouns.json  interrogative_sentences.json  languages.json  leaning.json  learning.json  linguistics.json  little_words.json  misc.json  money.json  months.json  nature.json  (+19 more)
tests/: __init__.py  base.py  test_diff.py  test_match.py  test_model.py  test_output.py  test_persistence.py  test_speech.py
tests/concepts/: test_concepts.py  test_topics.py
tests/toisto/: base.py  test_app.py  test_cli.py  test_diff.py  test_match.py  test_metadata.py  test_output.py  test_persistence.py  test_speech.py  test_tools.py
tests/topics/: test_topics.py
tools/: add_concept_key_to_label.py  add_concept_object.py  add_label_key.py  add_label_object.py  add_language_to_label.py  add_topics_object.py  fix.sh  format_json.py  give_colloquial_key.py  give_meaning_key.py  give_note_key.py  give_tip_key.py  make_label_object.py  move_labels_out_of_concept.py  organize_concepts.py  profile.sh  refactor_synonyms.py  remove_concept_object.py  remove_language_from_label.py  reverse_languages_and_grammar.py  sort_topics.py  split_spelling_alternatives.py  test.sh  validate_concept_references.py  validate_markdown_json.py
(+988 files in other folders)
